# MINDS

./: LICENSE  README.md  README.rst  pyproject.toml
examples/: MINDS_reduction_multi.ipynb  README_2examples.rst  README_examples.rst  jwst_query.cfg
examples/pre_v1.14/: MINDS_reduction_multi.ipynb
minds_pipeline/: utils_bkg_008.py  utils_bpc_008.py  utils_cs_008.py  utils_mp_008.py  utils_phot_008.py
src/minds/: apcorr_factors_ap1.5-3.5FWHM_annulus_smooth.fits  apcorr_factors_ap1.5-3.5FWHM_smooth.fits  bkg.py  bpc.py  cs.py  moments.py  mp.py  phot.py  utils_bkg.py  utils_cs.py  utils_mp.py
